--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,6 +7,7 @@
 footer {
   @include padding.px(24px);
   @include padding.py(16px);
+  @include margin.mt(72px);
   line-height: 32px;
 
   .header_services-wrapper {
