replace mock api with express API added error message when name/comment is less than 3 characters

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -49,6 +49,13 @@
         border-color: variables.$error;
       }
     }
+
+    .error-message {
+      color: red;
+      font-family: "Outfit-Light";
+      font-style: italic;
+      @include margin.m(3px, 0, 0, 5px);
+    }
   }
 
   .form__submit-btn {
